# package-template

./: .pre-commit-config.yaml  LICENSE  README.md  copier.yml  pyproject.toml
.github/: zizmor.yml
.github/workflows/: quality.yaml  quality.yml
copier/: config.yml  messages.yml  questions.yml  tools.yml
template/: .gitignore.jinja  README.md.jinja  pyproject.toml.jinja  {% if license == 'mit' %}LICENSE{% endif %}.jinja  {% if use_precommit %}.pre-commit-config.yaml{% endif %}.jinja
template/.github/: zizmor.yml
template/.github/workflows/: publish.yml.jinja  quality.yaml  quality.yml
template/src/{{package_name}}/: __init__.py.jinja  __main__.py.jinja
template/tests/: test_{{package_name}}.py.jinja
tests/: test_template.py
