[project]
name = "package-template"
version = "0.1.0"
description = "A copier-based python package template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["copier"]

[dependency-groups]
dev = [{ include-group = "tests" }]
tests = ["pytest>=8.3.5", "pytest-copie"]

# == Testing config ==
[tool.tox]
min_version = "4"
requires = ["tox>=4.19", "tox-uv>=1"]
env_list = ["3.13", "3.12", "3.11", "3.10"]
no_package = true

# This is a workaround
# See Issue: https://github.com/ymyzk/tox-gh-actions/issues/198
[tool.tox.gh-actions]
python = """
	3.10: py310
	3.11: py311
	3.12: py312
	3.13: py313
	"""

[tool.tox.env_run_base]
description = "run unit tests"
dependency_groups = ["tests"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]
